tests/sumo/cf_model/errors/stepsize2/errors.sumo.sublanes
Warning: Value of tau=0.5 in car following model 'carFollowing-Krauss' lower than simulation step size may cause collisions
Warning: Teleporting vehicle 'follower'; collision with vehicle 'leader', lane='end_0', gap=-1.94', latGap=-1.80, time=58.00 stage=move.
Warning: Vehicle 'follower' ends teleporting on edge 'rend', time 58.00.
